nextcloud/network-policy-nextcloud-allow-php-egress-db-redis-clamav.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-php-egress-db-redis-clamav
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      component: web
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
          podSelector:
            matchLabels:
              app: mysql
      ports:
        - protocol: TCP
          port: 3306
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clamav
      ports:
        - protocol: TCP
          port: 3200
